# airflow_lite

./: .claudeignore  .coderabbit.yaml  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  PLAN.md  PROGRESS.md  README.md  codex-coding-workflow.md  opus-coding-workflow.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: github-issue-cycle-agent.md  pr-review-issues-agent.md
.claude/commands/: github-issue-cycle.md
.codex/: config.toml
.github/: labels.json
.github/workflows/: ci.yml  (+3 more)
.tmp_pytest/: test_analytics_chart_and_filtecurrent  test_analytics_dashboard_endpocurrent  test_analytics_summary_endpoincurrent  test_get_dashboard_definition_current  test_integration_with_real_dbcurrent  test_query_chart_rows_by_monthcurrent  test_query_filters_returns_soucurrent  test_query_summary_aggregates_current  test_query_summary_rejects_unscurrent
config/: pipelines.sample.yaml  pipelines.yaml
dags/: crasivttst.py  default.py
docs/: airflow-lite-user-manual.md  requirements.md  webui_structure_analysis.md
spec/: architecture.md  docs_standard.txt  mart-refresh-design.md  query-api-contract.md  webui-menu-map.md
tests/: conftest.py  test_admin_repository.py  test_admin_toggle_fix.py  test_alerting.py  test_api.py  test_backfill.py  test_bootstrap.py  test_browse_dag_runs_null_run_id.py  test_css_modules.py  test_dag_loader.py  test_dispatch_service.py  test_engine.py  test_export_cleanup.py  test_export_xlsx.py  test_extract.py  test_health.py  test_issue_triage.py  test_label_sync.py  test_mart.py  test_pipeline_config_validation.py  test_pipeline_task_panel.py  test_query_service.py  test_reference_reader.py  test_repository.py  test_scheduler.py  test_service.py  test_settings.py  test_storage.py  test_web_admin_pages.py  test_web_assets_page.py  test_web_browse_pages.py  test_web_pipeline_detail_tabs.py  test_web_security_pages.py  test_webui_utils.py
(+259 files in other folders)
